--- a/package.json
+++ b/package.json
@@ -36,7 +36,18 @@
   "dependencies": {
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "@types/react-redux": "^7.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "axios": "^0.19.2",
+    "final-form": "^4.19.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-async-script": "^1.1.1",
+    "react-dom": "^16.13.1",
+    "react-final-form": "^6.4.0",
+    "react-google-recaptcha": "^2.0.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
