--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@types/react": "^16.9.34",
@@ -45,6 +45,7 @@
     "react-dom": "^16.13.1",
     "react-final-form": "^6.4.0",
     "react-google-recaptcha": "^2.0.1",
+    "react-notifications": "^1.6.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
