--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "final-form": "^4.19.1",
+    "i18next": "^19.4.5",
     "react": "^16.13.1",
     "react-async-script": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.4.0",
     "react-google-recaptcha": "^2.0.1",
+    "react-i18next": "^11.5.0",
     "react-notifications": "^1.6.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
